--- a/pricing.css
+++ b/pricing.css
@@ -128,14 +128,14 @@ nav{
     background-repeat: no-repeat;
 }
 .package-B-image{
-    background-image: url(Assets/Package-B-images.png);
+    background-image: url(Assets/Package-B-Images.png);
     background-size: 60%;
     height: 200px;
     background-position: center; /* Center the image */
     background-repeat: no-repeat;
 }
 .package-C-image{
-    background-image: url(Assets/Package-C-images.png);
+    background-image: url(Assets/Package-C-Images.png);
     background-size: 60%;
     height: 200px;
     background-position: center; /* Center the image */
