--- a/pricing.css
+++ b/pricing.css
@@ -254,9 +254,20 @@ table {
     .article-item{
         height: 240px;
     }
-    
+    .article-item-description{
+        overflow-y: scroll;
+    }
 }
-
+@media screen and (max-width:984px) and (min-width:584px){
+    .article-item{
+        max-width: 1000px;
+    }
+    .article-item-description{
+        min-height: 50%;
+        padding: 22px 10px 0px 10px;
+        margin-top: 0px;
+    }
+}
 @media screen and (max-width:1060px) and (min-width:481px){
     
     header{
